# aoc2018

./: .gitignore  CMakeLists.txt
aoc2015/: CMakeLists.txt
aoc2015/day1/: a.c  a.py
aoc2015/day10/: day10.py
aoc2015/day11/: day11.py
aoc2015/day12/: day12.py  day12b.py
aoc2015/day13/: day13.py
aoc2015/day14/: day14.py
aoc2015/day2/: a.py
aoc2016/: CMakeLists.txt
aoc2017/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day23.txt  day24.py  day25.py  day3.py  day3b.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
aoc2021/: CMakeLists.txt
aoc2021/day1/: a.c
aoc2021/day10/: a.c
aoc2021/day11/: a.c
aoc2021/day12/: a.c
aoc2021/day13/: a.c
aoc2021/day14/: a.c
aoc2021/day15/: a.c
aoc2021/day16/: a.c
aoc2021/day17/: a.c
aoc2021/day18/: a.c
aoc2021/day19/: a.c
aoc2021/day2/: a.c
aoc2021/day20/: a.c
aoc2021/day21/: a.c
aoc2021/day22/: a.c  cuboids.c
aoc2021/day23/: a.c  input  test
aoc2021/day24/: a.c  alu.h  input.c  transpile.c
aoc2021/day25/: a.c
aoc2021/day3/: a.c
aoc2021/day4/: a.c
aoc2021/day5/: a.c
aoc2021/day6/: a.c
aoc2021/day7/: a.c
aoc2021/day8/: a.c
aoc2021/day9/: a.c
aoc2022/: template.py
day1/: a.py  b.py
day11/: a.py
day13/: a.py
day15/: input  test2  test4  test5  test6  test7
day18/: a.py
day19/: a.py
day2/: a.py  b.py
day20/: a.py  input  test
day22/: a.py
day23/: a.py  b.py
day25/: a.py  test3
day3/: b.py
day4/: a.py
day5/: a.py  b.py
day6/: a.py  b.py
day7/: a.py  b.py
day9/: a.py
include/: aoc.h  dict.h  heap.h  ocr.h  queue.h  utils.h  values.h
tests/: hash.c  heaping.c  queuing.c
(+225 files in other folders)
