add_executable(2021day1 day1/a.c)
add_executable(2021day2 day2/a.c)
add_executable(2021day3 day3/a.c)
add_executable(2021day4 day4/a.c)
add_executable(2021day5 day5/a.c)
add_executable(2021day6 day6/a.c)
add_executable(2021day7 day7/a.c)
add_executable(2021day8 day8/a.c)
add_executable(2021day9 day9/a.c)
add_executable(2021day10 day10/a.c)
add_executable(2021day11 day11/a.c)
add_executable(2021day12 day12/a.c)
add_executable(2021day13 day13/a.c)
add_executable(2021day14 day14/a.c)
add_executable(2021day15 day15/a.c)
add_executable(2021day16 day16/a.c)
